Fixed Loading State Alignment

--- a/client/src/components/Profile/Profile.module.css
+++ b/client/src/components/Profile/Profile.module.css
@@ -115,3 +115,8 @@
 .inputs::-webkit-input-placeholder {
     color: grey;
 }
+
+.loadstate{
+    justify-content: center;
+    display: flex;    
+}
